health_service/k8s/crud-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: crud-service
spec:
  replicas: 2
  selector:
    matchLabels:
      app: crud-service
  template:
    metadata:
      labels:
        app: crud-service
    spec:
      containers:
        - name: crud-service
          image: crud-service:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8000
          readinessProbe:
            httpGet:
              path: /users/
              port: 8000
            initialDelaySeconds: 5
            periodSeconds: 5
          livenessProbe:
            httpGet:
              path: /users/
              port: 8000
            initialDelaySeconds: 10
            periodSeconds: 10
