health_service/k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: health-service
spec:
  replicas: 2
  selector:
    matchLabels:
      app: health-service
  template:
    metadata:
      labels:
        app: health-service
    spec:
      containers:
        - name: health-service
          image: homer3368/health-service:amd64
          ports:
            - containerPort: 8000
          livenessProbe:
            httpGet:
              path: /health/
              port: 8000
            initialDelaySeconds: 5
            periodSeconds: 10
          readinessProbe:
            httpGet:
              path: /health/
              port: 8000
            initialDelaySeconds: 2
            periodSeconds: 5
