health_service/k8s/crud-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: crud-service
spec:
  selector:
    app: crud-service
  ports:
    - port: 8000
      targetPort: 8000
      protocol: TCP
  type: ClusterIP
