health_service/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: health-service
spec:
  selector:
    app: health-service
  ports:
    - port: 8000
      targetPort: 8000
      protocol: TCP
  type: ClusterIP
