health_service/k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: health-service-ingress
spec:
  rules:
    - host: arch.homework
      http:
        paths:
          - path: /health
            pathType: Prefix
            backend:
              service:
                name: health-service
                port:
                  number: 8000
          - path: /users
            pathType: Prefix
            backend:
              service:
                name: crud-service
                port:
                  number: 8000
          - path: /docs
            pathType: Prefix
            backend:
              service:
                name: crud-service
                port:
                  number: 8000
          - path: /openapi.json
            pathType: Prefix
            backend:
              service:
                name: crud-service
                port:
                  number: 8000
          - path: /redoc
            pathType: Prefix
            backend:
              service:
                name: crud-service
                port:
                  number: 8000
